[ENG-2267] Subscribe Config  (#160)
Subscribe Config Defined.

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -139,6 +139,102 @@ components:
           x-go-type-skip-optional-pointer: true
           additionalProperties:
             $ref: '#/components/schemas/FieldSetting'
+   
+    BaseSubscribeConfig:
+      title: Base Subscribe Config
+      type: object
+      properties:
+        objects:
+          type: object
+          additionalProperties:
+            $ref: '#/components/schemas/BaseSubscribeConfigObject'
+    
+    BaseSubscribeConfigObject:
+      title: Base Subscribe Config Object
+      type: object
+      required:
+        - objectName
+        - destination
+        - inheritFieldsAndMappings
+      properties:
+        inheritFieldsAndMappings:
+          type: boolean
+          description: Whether to inherit fields and mappings from the read config.
+          example: true
+        objectName:
+          description: The name of the object to subscribe to.
+          example: account
+          type: string
+          x-oapi-codegen-extra-tags:
+            validate: required
+        destination:
+          description: The name of the destination that the result should be sent to.
+          example: accountWebhook
+          type: string
+          x-oapi-codegen-extra-tags:
+            validate: required
+        createEvent:
+          $ref: '#/components/schemas/ConfigCreateEvent'
+        updateEvent:
+          $ref: '#/components/schemas/ConfigUpdateEvent'
+        deleteEvent:
+          $ref: '#/components/schemas/ConfigDeleteEvent'
+
+    ConfigCreateEvent:
+      title: Create Event
+      type: object
+      required:
+        - enabled
+      properties:
+        enabled:
+          type: string
+          description: Conditions to enable create events.
+          enum: [ always ]
+          x-oapi-codegen-extra-tags:
+            validate: oneof=always
+
+    ConfigUpdateEvent:
+      title: Update Event
+      type: object
+      required:
+        - enabled
+      properties:
+        enabled:
+          type: string
+          description: Conditions to enable update events.
+          example: always
+          enum: [ always ]
+          x-oapi-codegen-extra-tags:
+            validate: oneof=always
+        watchFieldsAuto:
+          x-oapi-codegen-extra-tags:
+            validate: required_without=RequiredWatchFields
+          type: string
+          description: Whether to watch fields all fields automatically.
+          example: all
+          enum: [ all ]
+        requiredWatchFields:
+          x-oapi-codegen-extra-tags:
+            validate: required_without=WatchFieldsAuto,min=1
+          type: array
+          items:
+            type: string
+          description: The fields that should be watched.
+          example: [ name, description ]
+
+    ConfigDeleteEvent:
+      title: Delete Event
+      type: object
+      required:
+        - enabled
+      properties:
+        enabled:
+          type: string
+          description: Conditions to enable delete events.
+          example: always
+          x-oapi-codegen-extra-tags:
+            validate: oneof=always
+          enum: [ always ]
 
     ConfigContent:
       title: Config Content
@@ -152,6 +248,8 @@ components:
               $ref: '#/components/schemas/ReadConfig'
             write:
               $ref: '#/components/schemas/WriteConfig'
+            subscribe:
+              $ref: '#/components/schemas/SubscribeConfig'
 
     ReadConfig:
       title: Read Config
@@ -193,6 +291,26 @@ components:
         - type: object
           required:
             - objectName
+    
+    SubscribeConfig:
+      title: Subscribe Config
+      allOf:
+        - $ref: '#/components/schemas/BaseSubscribeConfig'
+        - type: object
+          properties:
+            objects:
+              additionalProperties:
+                $ref: '#/components/schemas/SubscribeConfigObject'
+    
+    SubscribeConfigObject:
+      title: Subscribe Config Object
+      allOf:
+        - $ref: '#/components/schemas/BaseSubscribeConfigObject'
+        - type: object
+          required:
+            - objectName
+            - destination
+            - inheritFieldsAndMappings
 
     UpdateInstallationConfigContent:
       title: Update Installation Config Content
