--- a/api/api.yaml
+++ b/api/api.yaml
@@ -1164,7 +1164,8 @@ paths:
       x-codegen-request-body-name: installationUpdate
   /projects/{projectIdOrName}/integrations/{integrationId}/installations/{installationId}:pause:
     post:
-      summary: Pause reads for an installation. If reads are already paused, this will be a no-op.
+      summary: Pause reads for an installation
+      description: Pauses all reads for an installation. If reads are already paused, this will be a no-op. Accepts specific objects to pause reads for in the request body.
       operationId: pauseReads
       tags: ["Installation"]
       parameters:
@@ -1220,7 +1221,8 @@ paths:
                 $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
   /projects/{projectIdOrName}/integrations/{integrationId}/installations/{installationId}:unpause:
     post:
-      summary: Unpause reads for an installation. If no reads were paused, this will be a no-op.
+      summary: Unpause reads for an installation
+      description: Unpauses all reads for an installation. If no reads were paused, this will be a no-op. Accepts specific objects to unpause reads for in the request body.
       operationId: unpauseReads
       tags: ["Installation"]
       parameters:
