--- a/catalog/catalog.yaml
+++ b/catalog/catalog.yaml
@@ -526,6 +526,9 @@ components:
           description: URL with more information about how to locate this value
           example: https://example.com/how-to-find-subdomain
           x-go-type-skip-optional-pointer: true
+        moduleDependencies:
+          $ref: '#/components/schemas/ModuleDependencies'
+          description: Module-specific dependencies for this metadata item.
     MetadataItemPostAuthentication:
       title: Metadata Item (fetched post authentication)
       type: object
@@ -536,3 +539,22 @@ components:
           type: string
           description: The internal identifier for the metadata field
           x-go-type-skip-optional-pointer: true
+        moduleDependencies:
+          $ref: '#/components/schemas/ModuleDependencies'
+          description: Module-specific dependencies for this metadata item.
+
+    ModuleDependencies:
+      title: Module Dependencies
+      type: object
+      description: Does this metadata item only apply to a specific module?
+      additionalProperties:
+        $ref: '#/components/schemas/ModuleDependency'
+      x-go-type: map[common.ModuleID]ModuleDependency
+      x-go-type-import:
+        path: "github.com/amp-labs/connectors/common"
+
+    ModuleDependency:
+      title: Module Dependency
+      type: object
+      description: Dependency for a single module.
+      properties: {}
