add support for mapped objs

--- a/api/api.yaml
+++ b/api/api.yaml
@@ -1197,9 +1197,10 @@ paths:
               properties:
                 objects:
                   type: array
+                  required: false
                   items:
                     type: string
-                    description: The names of the objects to pause reads for.
+                    description: The names of the objects (mapped or unmapped) to pause reads for. If omitted, all objects will be paused.
                     example: ["account", "contact"]
                 note:
                   type: string
