--- a/api/api.yaml
+++ b/api/api.yaml
@@ -1199,7 +1199,7 @@ paths:
                   type: array
                   items:
                     type: string
-                    description: The names of the objects (mapped or unmapped) to pause reads for. If omitted, all objects will be paused.
+                    description: The names of the objects (mapped or unmapped) to pause reads for. If this is omitted, all objects will be paused.
                     example: ["account", "contact"]
                 note:
                   type: string
