--- a/api/api.yaml
+++ b/api/api.yaml
@@ -1199,8 +1199,8 @@ paths:
                   type: array
                   items:
                     type: string
-                    description: The names of the objects (mapped or unmapped) to pause reads for. If this is omitted, all objects will be paused.
                     example: ["account", "contact"]
+                    description: The names of the objects (mapped or unmapped) to pause reads for. If not provided, all objects will be paused.
                 note:
                   type: string
                   description: A note to accompany the pause.
