--- a/api/read.yaml
+++ b/api/read.yaml
@@ -118,7 +118,7 @@ paths:
       summary: Pause reads for an installation
       description: Pauses all reads for an installation. If reads are already paused, this will be a no-op. Accepts specific objects to pause reads for in the request body.
       operationId: pauseReads
-      tags: ["Installation"]
+      tags: ["Read"]
       parameters:
         - name: projectIdOrName
           in: path
@@ -175,7 +175,7 @@ paths:
       summary: Unpause reads for an installation
       description: Unpauses all reads for an installation. If no reads were paused, this will be a no-op. Accepts specific objects to unpause reads for in the request body.
       operationId: unpauseReads
-      tags: ["Installation"]
+      tags: ["Read"]
       parameters:
         - name: projectIdOrName
           in: path
