update manifest enabled event

--- a/manifest/manifest.yaml
+++ b/manifest/manifest.yaml
@@ -176,7 +176,7 @@ components:
       properties:
         enabled:
           type: string
-          description: If always, the integration will subscribe to create events.
+          description: If always, the integration will subscribe to create events by default.
           enum: [always, never]
 
     UpdateEvent:
@@ -184,7 +184,7 @@ components:
       properties:
         enabled:
           type: string
-          description: If always, the integration will subscribe to update events.
+          description: If always, the integration will subscribe to update events by default.
           enum: [always, never]
         watchFieldsAuto:
           type: string
@@ -205,7 +205,7 @@ components:
       properties:
         enabled:
           type: string
-          description: If always, the integration will subscribe to delete events.
+          description: If always, the integration will subscribe to delete events by default.
           enum: [always, never]
 
     AssociationChangeEvent:
