mark hydratedRevision allFields as deprecated

--- a/manifest/manifest.yaml
+++ b/manifest/manifest.yaml
@@ -317,16 +317,17 @@ components:
             $ref: '#/components/schemas/HydratedIntegrationField'
         optionalFieldsAuto:
           $ref: '#/components/schemas/OptionalFieldsAutoOption'
-        allFields:
-          description: This is a list of all fields on the object for a particular SaaS instance, including their display names.
-          type: array
-          items:
-            $ref: '#/components/schemas/HydratedIntegrationField'
         allFieldsMetadata:
           description: This is a map of all fields on the object including their metadata (such as display name and type), the keys of the map are the field names.
           type: object
           additionalProperties:
             $ref: '#/components/schemas/FieldMetadata'
+        allFields:
+          description: This is a list of all fields on the object for a particular SaaS instance, including their display names. Prefer using allFieldsMetadata instead.
+          type: array
+          deprecated: true
+          items:
+            $ref: '#/components/schemas/HydratedIntegrationField'
         backfill:
           $ref: '#/components/schemas/Backfill'
 
