--- a/api/api.yaml
+++ b/api/api.yaml
@@ -2019,6 +2019,20 @@ paths:
                   type: string
                   description: The type of the destination
                   example: webhook
+                secrets:
+                  type: object
+                  description: Secrets for the destination. This is only used for Kinesis destinations.
+                  properties:
+                    awsKeyId:
+                      type: string
+                      description: The AWS access key ID for the Kinesis destination.
+                      example: AKIAIOSFODNN7EXAMPLE
+                      x-go-type-skip-optional-pointer: true
+                    awsSecretKey:
+                      type: string
+                      description: The AWS secret access key for the Kinesis destination.
+                      example: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
+                      x-go-type-skip-optional-pointer: true
                 metadata:
                   type: object
                   properties:
@@ -2028,6 +2042,26 @@ paths:
                       example: https://webhooks.mailmonkey.com/salesforce-lead-converted
                     headers:
                       $ref: "#/components/schemas/WebhookHeaders"
+                    kinesisRegion:
+                      type: string
+                      description: The AWS region where the kinesis destination is hosted.
+                      example: us-east-1
+                      x-go-type-skip-optional-pointer: true
+                    kinesisStreamName:
+                      type: string
+                      description: The name of the Kinesis stream to send events to.
+                      example: my-kinesis-stream
+                      x-go-type-skip-optional-pointer: true
+                    kinesisEndpointUrl:
+                      type: string
+                      description: The endpoint URL for the Kinesis stream.
+                      example: https://kinesis.us-east-1.amazonaws.com
+                      x-go-type-skip-optional-pointer: true
+                    kinesisPartitionKeyTemplate:
+                      type: string
+                      description: The template for the partition key to use when sending events to Kinesis (a JMESPath template)
+                      example: "data.user_id"
+                      x-go-type-skip-optional-pointer: true
       responses:
         201:
           description: Created
