--- a/catalog/catalog.yaml
+++ b/catalog/catalog.yaml
@@ -21,7 +21,7 @@ components:
       title: Auth Type
       description: The type of authentication required by the provider.
       type: string
-      enum: [oauth2, apiKey, basic, jwt, none]
+      enum: [oauth2, apiKey, basic, jwt, custom, none]
       x-oapi-codegen-extra-tags:
         validate: required
 
@@ -296,6 +296,91 @@ components:
           description: How to transform the API key in to a basic auth user:pass string. The %s is replaced with the API key value.
           x-go-type-skip-optional-pointer: true
 
+    CustomAuthHeader:
+      title: Custom Auth Header
+      type: object
+      description: A custom header to be used for authentication. Automatically added by the backend.
+      required:
+        - name
+        - valueTemplate
+      properties:
+        name:
+          type: string
+          example: X-Custom-Auth
+          description: The name of the header.
+        valueTemplate:
+          type: string
+          example: Bearer {{ .token }}
+          description: The value of the header, represented as a Golang text/template expression. Only the backend will interpret this.
+
+    CustomAuthQueryParam:
+      title: Custom Auth Query Parameter
+      type: object
+      description: A custom query parameter to be used for authentication. Automatically added by the backend.
+      required:
+        - name
+        - valueTemplate
+      properties:
+        name:
+          type: string
+          example: custom_auth
+          description: The name of the query parameter.
+        valueTemplate:
+          type: string
+          example: {{ .token }}
+          description: The value of the query parameter, represented as a Golang text/template expression. Only the backend will interpret this.
+
+    CustomAuthInput:
+      title: Custom Auth Input
+      type: object
+      description: A custom input field for authentication. This is used by the frontend to dynamically render input fields for custom auth. The backend will not interpret this. It will however receive the value of this field before making a request (in the connection secrets).
+      required:
+        - name
+        - displayName
+      properties:
+        name:
+          type: string
+          example: custom_auth_input
+          description: The internal identifier for the custom auth input field.
+        displayName:
+          type: string
+          example: Custom Auth Input
+          description: The human-readable name for the custom auth input field.
+        prompt:
+          type: string
+          example: See Authorization section of provider docs to obtain this value
+          description: Some helpful text or context to be displayed to the user when asking for this input.
+          x-go-type-skip-optional-pointer: true
+        docsURL:
+          type: string
+          example: https://docs.example.com/custom-auth-input
+          description: URL with details about this authentication mechanism and how to use it. Might be specific to this field, or a general URL for the provider. Optional.
+          x-go-type-skip-optional-pointer: true
+
+    CustomAuthOpts:
+      title: Custom Auth Options
+      type: object
+      description: Configuration for custom auth. Optional.
+      properties:
+        headers:
+          type: array
+          items:
+            $ref: '#/components/schemas/CustomAuthHeader'
+          description: A list of custom headers to be used for authentication. The backend will add these headers.
+          x-go-type-skip-optional-pointer: true
+        queryParams:
+          type: array
+          items:
+            $ref: '#/components/schemas/CustomAuthQueryParam'
+          description: A list of custom query parameters to be used for authentication. The backend will add these query parameters.
+          x-go-type-skip-optional-pointer: true
+        inputs:
+          type: array
+          items:
+            $ref: '#/components/schemas/CustomAuthInput'
+          description: A list of custom input fields for authentication. The frontend will render these input fields and the backend will receive the values of these fields before making a request.
+          x-go-type-skip-optional-pointer: true
+
     BasicAuthOpts:
       title: Basic Auth Options
       type: object
@@ -407,6 +492,8 @@ components:
           $ref: '#/components/schemas/ApiKeyOpts'
         basicOpts:
           $ref: '#/components/schemas/BasicAuthOpts'
+        customOpts:
+          $ref: '#/components/schemas/CustomAuthOpts'
         support:
           $ref: '#/components/schemas/Support'
         providerOpts:
