feat(api-types): Default metadata value

--- a/catalog/catalog.yaml
+++ b/catalog/catalog.yaml
@@ -608,6 +608,10 @@ components:
           type: string
           description: The human-readable name for the field
           x-go-type-skip-optional-pointer: true
+        defaultValue:
+          type: string
+          description: Default value for this metadata item
+          x-go-type-skip-optional-pointer: true
         docsURL:
           type: string
           description: URL with more information about how to locate this value
