--- a/api/read.yaml
+++ b/api/read.yaml
@@ -250,6 +250,10 @@ components:
           type: string
           description: The UTC timestamp from which to read data. If omitted, we will read all data.
           example: "2024-07-01T18:22:30.323771761Z"
+        untilTimestamp:
+          type: string
+          description: The UTC timestamp until which to read data.
+          example: "2024-07-05T18:22:30.323771761Z"
     ReadResultAsync:
       title: Read Result Async
       type: object
