--- a/manifest/manifest.yaml
+++ b/manifest/manifest.yaml
@@ -41,6 +41,8 @@ components:
           type: string
         provider:
           type: string
+        module:
+          type: string
         read:
           $ref: '#/components/schemas/IntegrationRead'
         write:
