--- a/manifest/manifest.yaml
+++ b/manifest/manifest.yaml
@@ -60,6 +60,9 @@ components:
       properties:
         enabled:
           type: boolean
+        useModule:
+          type: boolean
+          description: Default is false. If this is set to true, the base URL for the proxy action will be the module's base URL. Otherwise, it is assumed that the base URL is the provider's root base URL.
 
     IntegrationRead:
       title: Read Integration
@@ -262,6 +265,9 @@ components:
       properties:
         enabled:
           type: boolean
+        useModule:
+          type: boolean
+          description: Default is false. If this is set to true, the base URL for the proxy action will be the module's base URL. Otherwise, it is assumed that the base URL is the provider's root base URL.
 
     HydratedIntegrationRead:
       title: Hydrated Read Integration
