--- a/api/api.yaml
+++ b/api/api.yaml
@@ -2017,8 +2017,14 @@ paths:
                   example: leadConvertedWebhook
                 type:
                   type: string
-                  description: The type of the destination
+                  description: The type of the destination.
                   example: webhook
+                  enum: [webhook, kinesis]
+                provider:
+                  type: string
+                  description: The provider of the destination.
+                  example: svix
+                  enum: [svix, outpost]
                 secrets:
                   type: object
                   description: Secrets for the destination. This is only used for Kinesis destinations.
@@ -2032,6 +2038,11 @@ paths:
                       type: string
                       description: The AWS secret access key for the Kinesis destination.
                       example: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
+                      x-go-type-skip-optional-pointer: true
+                    awsSessionToken:
+                      type: string
+                      description: The AWS session token for the Kinesis destination.
+                      example: AQoEXAMPLEH4aoAH0gNCAPy...
                       x-go-type-skip-optional-pointer: true
                 metadata:
                   type: object
