--- a/api/api.yaml
+++ b/api/api.yaml
@@ -1229,7 +1229,7 @@ paths:
           example: my-project
         - name: groupRef
           in: query
-          description: The the installation field to filter by.
+          description: The group ref to filter by.
           example: groupRef123
           schema:
             type: string
